--- a/Frontend/src/pages/users/Cart.css
+++ b/Frontend/src/pages/users/Cart.css
@@ -7,10 +7,9 @@
 
 /* Main Container */
 .cart-container {
-  margin-left: 30px;
-  margin-right: 30px;
+
   padding: 40px 160px;
-  max-width: 1600px;
+
   margin: 0 auto;
 }
 
@@ -424,7 +423,7 @@
 }
 
 .apply-coupon-btn {
-  background-color: #000;
+  background-color: #ffc107;
   color: #fff;
   border: none;
   padding: 0 20px;
@@ -614,7 +613,7 @@
 
 .place-order-btn {
   width: 100%;
-  background-color: #000;
+  background-color: #ffc107;
   color: #fff;
   padding: 18px 10px;
   border: none;
